test_scores/negative_dimers/features/Q9BT25.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9BT25.pkl.xz